parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> { statements }
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statements -> statements { statements }
Rule 6     statement -> assignment
Rule 7     statement -> flow_control
Rule 8     assignment -> variable assignment_op expression ;
Rule 9     assignment_op -> =
Rule 10    assignment_op -> ADDASSIGN
Rule 11    assignment_op -> SUBASSIGN
Rule 12    assignment_op -> MULASSIGN
Rule 13    assignment_op -> DIVASSIGN
Rule 14    expression -> variable
Rule 15    expression -> constant
Rule 16    expression -> matrix
Rule 17    expression -> un_op
Rule 18    expression -> bin_op
Rule 19    expression -> logic_op
Rule 20    expression -> ( expression )
Rule 21    constant -> INTNUM
Rule 22    constant -> FLOATNUM
Rule 23    constant -> STRING
Rule 24    variable -> ID
Rule 25    variable -> matrix_access
Rule 26    value -> variable
Rule 27    value -> matrix
Rule 28    value -> constant
Rule 29    matrix_access -> ID [ int_sequence ]
Rule 30    matrix -> EYE ( int_sequence )
Rule 31    matrix -> ZEROS ( int_sequence )
Rule 32    matrix -> ONES ( int_sequence )
Rule 33    matrix -> [ matrix_row ]
Rule 34    int_sequence -> int_sequence , INTNUM
Rule 35    int_sequence -> INTNUM
Rule 36    matrix_row -> matrix_row , value
Rule 37    matrix_row -> value
Rule 38    bin_op -> expression + expression
Rule 39    bin_op -> expression * expression
Rule 40    bin_op -> expression - expression
Rule 41    bin_op -> expression / expression
Rule 42    bin_op -> expression DOTADD expression
Rule 43    bin_op -> expression DOTSUB expression
Rule 44    bin_op -> expression DOTMUL expression
Rule 45    bin_op -> expression DOTDIV expression
Rule 46    logic_op -> expression EQ expression
Rule 47    logic_op -> expression NEQ expression
Rule 48    logic_op -> expression > expression
Rule 49    logic_op -> expression < expression
Rule 50    logic_op -> expression LE expression
Rule 51    logic_op -> expression GE expression
Rule 52    un_op -> expression '
Rule 53    un_op -> - expression
Rule 54    flow_control -> conditional_statement
Rule 55    flow_control -> while_loop
Rule 56    flow_control -> for_loop
Rule 57    flow_control -> return_instr
Rule 58    flow_control -> break_instr
Rule 59    flow_control -> continue_instr
Rule 60    flow_control -> print_instr
Rule 61    conditional_statement -> IF ( logic_op ) conditional_instructions
Rule 62    conditional_statement -> IF ( logic_op ) conditional_instructions ELSE conditional_instructions
Rule 63    conditional_instructions -> statement
Rule 64    conditional_instructions -> { statements }
Rule 65    while_loop -> WHILE ( logic_op ) conditional_instructions
Rule 66    for_loop -> FOR ID = expression : expression conditional_instructions
Rule 67    return_instr -> RETURN expression ;
Rule 68    continue_instr -> CONTINUE ;
Rule 69    break_instr -> BREAK ;
Rule 70    print_instr -> PRINT instructions_to_print ;
Rule 71    instructions_to_print -> instructions_to_print , expression
Rule 72    instructions_to_print -> expression

Terminals, with rules where they appear

'                    : 52
(                    : 20 30 31 32 61 62 65
)                    : 20 30 31 32 61 62 65
*                    : 39
+                    : 38
,                    : 34 36 71
-                    : 40 53
/                    : 41
:                    : 66
;                    : 8 67 68 69 70
<                    : 49
=                    : 9 66
>                    : 48
ADDASSIGN            : 10
BREAK                : 69
CONTINUE             : 68
DIVASSIGN            : 13
DOTADD               : 42
DOTDIV               : 45
DOTMUL               : 44
DOTSUB               : 43
ELSE                 : 62
EQ                   : 46
EYE                  : 30
FLOATNUM             : 22
FOR                  : 66
GE                   : 51
ID                   : 24 29 66
IF                   : 61 62
INTNUM               : 21 34 35
LE                   : 50
MULASSIGN            : 12
NEQ                  : 47
ONES                 : 32
PRINT                : 70
RETURN               : 67
STRING               : 23
SUBASSIGN            : 11
WHILE                : 65
ZEROS                : 31
[                    : 29 33
]                    : 29 33
error                : 
{                    : 2 5 64
}                    : 2 5 64

Nonterminals, with rules where they appear

assignment           : 6
assignment_op        : 8
bin_op               : 18
break_instr          : 58
conditional_instructions : 61 62 62 65 66
conditional_statement : 54
constant             : 15 28
continue_instr       : 59
expression           : 8 20 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 66 66 67 71 72
flow_control         : 7
for_loop             : 56
instructions_to_print : 70 71
int_sequence         : 29 30 31 32 34
logic_op             : 19 61 62 65
matrix               : 16 27
matrix_access        : 25
matrix_row           : 33 36
print_instr          : 60
program              : 0
return_instr         : 57
statement            : 3 4 63
statements           : 1 2 3 5 5 64
un_op                : 17
value                : 36 37
variable             : 8 14 26
while_loop           : 55

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . { statements }
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statements -> . statements { statements }
    (6) statement -> . assignment
    (7) statement -> . flow_control
    (8) assignment -> . variable assignment_op expression ;
    (54) flow_control -> . conditional_statement
    (55) flow_control -> . while_loop
    (56) flow_control -> . for_loop
    (57) flow_control -> . return_instr
    (58) flow_control -> . break_instr
    (59) flow_control -> . continue_instr
    (60) flow_control -> . print_instr
    (24) variable -> . ID
    (25) variable -> . matrix_access
    (61) conditional_statement -> . IF ( logic_op ) conditional_instructions
    (62) conditional_statement -> . IF ( logic_op ) conditional_instructions ELSE conditional_instructions
    (65) while_loop -> . WHILE ( logic_op ) conditional_instructions
    (66) for_loop -> . FOR ID = expression : expression conditional_instructions
    (67) return_instr -> . RETURN expression ;
    (69) break_instr -> . BREAK ;
    (68) continue_instr -> . CONTINUE ;
    (70) print_instr -> . PRINT instructions_to_print ;
    (29) matrix_access -> . ID [ int_sequence ]

    {               shift and go to state 3
    ID              shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    PRINT           shift and go to state 23

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 4
    assignment                     shift and go to state 5
    flow_control                   shift and go to state 6
    variable                       shift and go to state 7
    conditional_statement          shift and go to state 8
    while_loop                     shift and go to state 9
    for_loop                       shift and go to state 10
    return_instr                   shift and go to state 11
    break_instr                    shift and go to state 12
    continue_instr                 shift and go to state 13
    print_instr                    shift and go to state 14
    matrix_access                  shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (5) statements -> statements . { statements }
    (6) statement -> . assignment
    (7) statement -> . flow_control
    (8) assignment -> . variable assignment_op expression ;
    (54) flow_control -> . conditional_statement
    (55) flow_control -> . while_loop
    (56) flow_control -> . for_loop
    (57) flow_control -> . return_instr
    (58) flow_control -> . break_instr
    (59) flow_control -> . continue_instr
    (60) flow_control -> . print_instr
    (24) variable -> . ID
    (25) variable -> . matrix_access
    (61) conditional_statement -> . IF ( logic_op ) conditional_instructions
    (62) conditional_statement -> . IF ( logic_op ) conditional_instructions ELSE conditional_instructions
    (65) while_loop -> . WHILE ( logic_op ) conditional_instructions
    (66) for_loop -> . FOR ID = expression : expression conditional_instructions
    (67) return_instr -> . RETURN expression ;
    (69) break_instr -> . BREAK ;
    (68) continue_instr -> . CONTINUE ;
    (70) print_instr -> . PRINT instructions_to_print ;
    (29) matrix_access -> . ID [ int_sequence ]

    $end            reduce using rule 1 (program -> statements .)
    {               shift and go to state 25
    ID              shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    PRINT           shift and go to state 23

    statement                      shift and go to state 24
    assignment                     shift and go to state 5
    flow_control                   shift and go to state 6
    variable                       shift and go to state 7
    conditional_statement          shift and go to state 8
    while_loop                     shift and go to state 9
    for_loop                       shift and go to state 10
    return_instr                   shift and go to state 11
    break_instr                    shift and go to state 12
    continue_instr                 shift and go to state 13
    print_instr                    shift and go to state 14
    matrix_access                  shift and go to state 16

state 3

    (2) statements -> { . statements }
    (2) statements -> . { statements }
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statements -> . statements { statements }
    (6) statement -> . assignment
    (7) statement -> . flow_control
    (8) assignment -> . variable assignment_op expression ;
    (54) flow_control -> . conditional_statement
    (55) flow_control -> . while_loop
    (56) flow_control -> . for_loop
    (57) flow_control -> . return_instr
    (58) flow_control -> . break_instr
    (59) flow_control -> . continue_instr
    (60) flow_control -> . print_instr
    (24) variable -> . ID
    (25) variable -> . matrix_access
    (61) conditional_statement -> . IF ( logic_op ) conditional_instructions
    (62) conditional_statement -> . IF ( logic_op ) conditional_instructions ELSE conditional_instructions
    (65) while_loop -> . WHILE ( logic_op ) conditional_instructions
    (66) for_loop -> . FOR ID = expression : expression conditional_instructions
    (67) return_instr -> . RETURN expression ;
    (69) break_instr -> . BREAK ;
    (68) continue_instr -> . CONTINUE ;
    (70) print_instr -> . PRINT instructions_to_print ;
    (29) matrix_access -> . ID [ int_sequence ]

    {               shift and go to state 3
    ID              shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    PRINT           shift and go to state 23

    statements                     shift and go to state 26
    statement                      shift and go to state 4
    assignment                     shift and go to state 5
    flow_control                   shift and go to state 6
    variable                       shift and go to state 7
    conditional_statement          shift and go to state 8
    while_loop                     shift and go to state 9
    for_loop                       shift and go to state 10
    return_instr                   shift and go to state 11
    break_instr                    shift and go to state 12
    continue_instr                 shift and go to state 13
    print_instr                    shift and go to state 14
    matrix_access                  shift and go to state 16

state 4

    (4) statements -> statement .

    {               reduce using rule 4 (statements -> statement .)
    ID              reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    RETURN          reduce using rule 4 (statements -> statement .)
    BREAK           reduce using rule 4 (statements -> statement .)
    CONTINUE        reduce using rule 4 (statements -> statement .)
    PRINT           reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    }               reduce using rule 4 (statements -> statement .)


state 5

    (6) statement -> assignment .

    {               reduce using rule 6 (statement -> assignment .)
    ID              reduce using rule 6 (statement -> assignment .)
    IF              reduce using rule 6 (statement -> assignment .)
    WHILE           reduce using rule 6 (statement -> assignment .)
    FOR             reduce using rule 6 (statement -> assignment .)
    RETURN          reduce using rule 6 (statement -> assignment .)
    BREAK           reduce using rule 6 (statement -> assignment .)
    CONTINUE        reduce using rule 6 (statement -> assignment .)
    PRINT           reduce using rule 6 (statement -> assignment .)
    $end            reduce using rule 6 (statement -> assignment .)
    }               reduce using rule 6 (statement -> assignment .)
    ELSE            reduce using rule 6 (statement -> assignment .)


state 6

    (7) statement -> flow_control .

    {               reduce using rule 7 (statement -> flow_control .)
    ID              reduce using rule 7 (statement -> flow_control .)
    IF              reduce using rule 7 (statement -> flow_control .)
    WHILE           reduce using rule 7 (statement -> flow_control .)
    FOR             reduce using rule 7 (statement -> flow_control .)
    RETURN          reduce using rule 7 (statement -> flow_control .)
    BREAK           reduce using rule 7 (statement -> flow_control .)
    CONTINUE        reduce using rule 7 (statement -> flow_control .)
    PRINT           reduce using rule 7 (statement -> flow_control .)
    $end            reduce using rule 7 (statement -> flow_control .)
    }               reduce using rule 7 (statement -> flow_control .)
    ELSE            reduce using rule 7 (statement -> flow_control .)


state 7

    (8) assignment -> variable . assignment_op expression ;
    (9) assignment_op -> . =
    (10) assignment_op -> . ADDASSIGN
    (11) assignment_op -> . SUBASSIGN
    (12) assignment_op -> . MULASSIGN
    (13) assignment_op -> . DIVASSIGN

    =               shift and go to state 28
    ADDASSIGN       shift and go to state 29
    SUBASSIGN       shift and go to state 30
    MULASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32

    assignment_op                  shift and go to state 27

state 8

    (54) flow_control -> conditional_statement .

    {               reduce using rule 54 (flow_control -> conditional_statement .)
    ID              reduce using rule 54 (flow_control -> conditional_statement .)
    IF              reduce using rule 54 (flow_control -> conditional_statement .)
    WHILE           reduce using rule 54 (flow_control -> conditional_statement .)
    FOR             reduce using rule 54 (flow_control -> conditional_statement .)
    RETURN          reduce using rule 54 (flow_control -> conditional_statement .)
    BREAK           reduce using rule 54 (flow_control -> conditional_statement .)
    CONTINUE        reduce using rule 54 (flow_control -> conditional_statement .)
    PRINT           reduce using rule 54 (flow_control -> conditional_statement .)
    $end            reduce using rule 54 (flow_control -> conditional_statement .)
    }               reduce using rule 54 (flow_control -> conditional_statement .)
    ELSE            reduce using rule 54 (flow_control -> conditional_statement .)


state 9

    (55) flow_control -> while_loop .

    {               reduce using rule 55 (flow_control -> while_loop .)
    ID              reduce using rule 55 (flow_control -> while_loop .)
    IF              reduce using rule 55 (flow_control -> while_loop .)
    WHILE           reduce using rule 55 (flow_control -> while_loop .)
    FOR             reduce using rule 55 (flow_control -> while_loop .)
    RETURN          reduce using rule 55 (flow_control -> while_loop .)
    BREAK           reduce using rule 55 (flow_control -> while_loop .)
    CONTINUE        reduce using rule 55 (flow_control -> while_loop .)
    PRINT           reduce using rule 55 (flow_control -> while_loop .)
    $end            reduce using rule 55 (flow_control -> while_loop .)
    }               reduce using rule 55 (flow_control -> while_loop .)
    ELSE            reduce using rule 55 (flow_control -> while_loop .)


state 10

    (56) flow_control -> for_loop .

    {               reduce using rule 56 (flow_control -> for_loop .)
    ID              reduce using rule 56 (flow_control -> for_loop .)
    IF              reduce using rule 56 (flow_control -> for_loop .)
    WHILE           reduce using rule 56 (flow_control -> for_loop .)
    FOR             reduce using rule 56 (flow_control -> for_loop .)
    RETURN          reduce using rule 56 (flow_control -> for_loop .)
    BREAK           reduce using rule 56 (flow_control -> for_loop .)
    CONTINUE        reduce using rule 56 (flow_control -> for_loop .)
    PRINT           reduce using rule 56 (flow_control -> for_loop .)
    $end            reduce using rule 56 (flow_control -> for_loop .)
    }               reduce using rule 56 (flow_control -> for_loop .)
    ELSE            reduce using rule 56 (flow_control -> for_loop .)


state 11

    (57) flow_control -> return_instr .

    {               reduce using rule 57 (flow_control -> return_instr .)
    ID              reduce using rule 57 (flow_control -> return_instr .)
    IF              reduce using rule 57 (flow_control -> return_instr .)
    WHILE           reduce using rule 57 (flow_control -> return_instr .)
    FOR             reduce using rule 57 (flow_control -> return_instr .)
    RETURN          reduce using rule 57 (flow_control -> return_instr .)
    BREAK           reduce using rule 57 (flow_control -> return_instr .)
    CONTINUE        reduce using rule 57 (flow_control -> return_instr .)
    PRINT           reduce using rule 57 (flow_control -> return_instr .)
    $end            reduce using rule 57 (flow_control -> return_instr .)
    }               reduce using rule 57 (flow_control -> return_instr .)
    ELSE            reduce using rule 57 (flow_control -> return_instr .)


state 12

    (58) flow_control -> break_instr .

    {               reduce using rule 58 (flow_control -> break_instr .)
    ID              reduce using rule 58 (flow_control -> break_instr .)
    IF              reduce using rule 58 (flow_control -> break_instr .)
    WHILE           reduce using rule 58 (flow_control -> break_instr .)
    FOR             reduce using rule 58 (flow_control -> break_instr .)
    RETURN          reduce using rule 58 (flow_control -> break_instr .)
    BREAK           reduce using rule 58 (flow_control -> break_instr .)
    CONTINUE        reduce using rule 58 (flow_control -> break_instr .)
    PRINT           reduce using rule 58 (flow_control -> break_instr .)
    $end            reduce using rule 58 (flow_control -> break_instr .)
    }               reduce using rule 58 (flow_control -> break_instr .)
    ELSE            reduce using rule 58 (flow_control -> break_instr .)


state 13

    (59) flow_control -> continue_instr .

    {               reduce using rule 59 (flow_control -> continue_instr .)
    ID              reduce using rule 59 (flow_control -> continue_instr .)
    IF              reduce using rule 59 (flow_control -> continue_instr .)
    WHILE           reduce using rule 59 (flow_control -> continue_instr .)
    FOR             reduce using rule 59 (flow_control -> continue_instr .)
    RETURN          reduce using rule 59 (flow_control -> continue_instr .)
    BREAK           reduce using rule 59 (flow_control -> continue_instr .)
    CONTINUE        reduce using rule 59 (flow_control -> continue_instr .)
    PRINT           reduce using rule 59 (flow_control -> continue_instr .)
    $end            reduce using rule 59 (flow_control -> continue_instr .)
    }               reduce using rule 59 (flow_control -> continue_instr .)
    ELSE            reduce using rule 59 (flow_control -> continue_instr .)


state 14

    (60) flow_control -> print_instr .

    {               reduce using rule 60 (flow_control -> print_instr .)
    ID              reduce using rule 60 (flow_control -> print_instr .)
    IF              reduce using rule 60 (flow_control -> print_instr .)
    WHILE           reduce using rule 60 (flow_control -> print_instr .)
    FOR             reduce using rule 60 (flow_control -> print_instr .)
    RETURN          reduce using rule 60 (flow_control -> print_instr .)
    BREAK           reduce using rule 60 (flow_control -> print_instr .)
    CONTINUE        reduce using rule 60 (flow_control -> print_instr .)
    PRINT           reduce using rule 60 (flow_control -> print_instr .)
    $end            reduce using rule 60 (flow_control -> print_instr .)
    }               reduce using rule 60 (flow_control -> print_instr .)
    ELSE            reduce using rule 60 (flow_control -> print_instr .)


state 15

    (24) variable -> ID .
    (29) matrix_access -> ID . [ int_sequence ]

    =               reduce using rule 24 (variable -> ID .)
    ADDASSIGN       reduce using rule 24 (variable -> ID .)
    SUBASSIGN       reduce using rule 24 (variable -> ID .)
    MULASSIGN       reduce using rule 24 (variable -> ID .)
    DIVASSIGN       reduce using rule 24 (variable -> ID .)
    ;               reduce using rule 24 (variable -> ID .)
    '               reduce using rule 24 (variable -> ID .)
    +               reduce using rule 24 (variable -> ID .)
    *               reduce using rule 24 (variable -> ID .)
    -               reduce using rule 24 (variable -> ID .)
    /               reduce using rule 24 (variable -> ID .)
    DOTADD          reduce using rule 24 (variable -> ID .)
    DOTSUB          reduce using rule 24 (variable -> ID .)
    DOTMUL          reduce using rule 24 (variable -> ID .)
    DOTDIV          reduce using rule 24 (variable -> ID .)
    EQ              reduce using rule 24 (variable -> ID .)
    NEQ             reduce using rule 24 (variable -> ID .)
    >               reduce using rule 24 (variable -> ID .)
    <               reduce using rule 24 (variable -> ID .)
    LE              reduce using rule 24 (variable -> ID .)
    GE              reduce using rule 24 (variable -> ID .)
    ,               reduce using rule 24 (variable -> ID .)
    )               reduce using rule 24 (variable -> ID .)
    ]               reduce using rule 24 (variable -> ID .)
    :               reduce using rule 24 (variable -> ID .)
    {               reduce using rule 24 (variable -> ID .)
    ID              reduce using rule 24 (variable -> ID .)
    IF              reduce using rule 24 (variable -> ID .)
    WHILE           reduce using rule 24 (variable -> ID .)
    FOR             reduce using rule 24 (variable -> ID .)
    RETURN          reduce using rule 24 (variable -> ID .)
    BREAK           reduce using rule 24 (variable -> ID .)
    CONTINUE        reduce using rule 24 (variable -> ID .)
    PRINT           reduce using rule 24 (variable -> ID .)
    [               shift and go to state 33


state 16

    (25) variable -> matrix_access .

    =               reduce using rule 25 (variable -> matrix_access .)
    ADDASSIGN       reduce using rule 25 (variable -> matrix_access .)
    SUBASSIGN       reduce using rule 25 (variable -> matrix_access .)
    MULASSIGN       reduce using rule 25 (variable -> matrix_access .)
    DIVASSIGN       reduce using rule 25 (variable -> matrix_access .)
    ;               reduce using rule 25 (variable -> matrix_access .)
    '               reduce using rule 25 (variable -> matrix_access .)
    +               reduce using rule 25 (variable -> matrix_access .)
    *               reduce using rule 25 (variable -> matrix_access .)
    -               reduce using rule 25 (variable -> matrix_access .)
    /               reduce using rule 25 (variable -> matrix_access .)
    DOTADD          reduce using rule 25 (variable -> matrix_access .)
    DOTSUB          reduce using rule 25 (variable -> matrix_access .)
    DOTMUL          reduce using rule 25 (variable -> matrix_access .)
    DOTDIV          reduce using rule 25 (variable -> matrix_access .)
    EQ              reduce using rule 25 (variable -> matrix_access .)
    NEQ             reduce using rule 25 (variable -> matrix_access .)
    >               reduce using rule 25 (variable -> matrix_access .)
    <               reduce using rule 25 (variable -> matrix_access .)
    LE              reduce using rule 25 (variable -> matrix_access .)
    GE              reduce using rule 25 (variable -> matrix_access .)
    ,               reduce using rule 25 (variable -> matrix_access .)
    )               reduce using rule 25 (variable -> matrix_access .)
    ]               reduce using rule 25 (variable -> matrix_access .)
    :               reduce using rule 25 (variable -> matrix_access .)
    {               reduce using rule 25 (variable -> matrix_access .)
    ID              reduce using rule 25 (variable -> matrix_access .)
    IF              reduce using rule 25 (variable -> matrix_access .)
    WHILE           reduce using rule 25 (variable -> matrix_access .)
    FOR             reduce using rule 25 (variable -> matrix_access .)
    RETURN          reduce using rule 25 (variable -> matrix_access .)
    BREAK           reduce using rule 25 (variable -> matrix_access .)
    CONTINUE        reduce using rule 25 (variable -> matrix_access .)
    PRINT           reduce using rule 25 (variable -> matrix_access .)


state 17

    (61) conditional_statement -> IF . ( logic_op ) conditional_instructions
    (62) conditional_statement -> IF . ( logic_op ) conditional_instructions ELSE conditional_instructions

    (               shift and go to state 34


state 18

    (65) while_loop -> WHILE . ( logic_op ) conditional_instructions

    (               shift and go to state 35


state 19

    (66) for_loop -> FOR . ID = expression : expression conditional_instructions

    ID              shift and go to state 36


state 20

    (67) return_instr -> RETURN . expression ;
    (14) expression -> . variable
    (15) expression -> . constant
    (16) expression -> . matrix
    (17) expression -> . un_op
    (18) expression -> . bin_op
    (19) expression -> . logic_op
    (20) expression -> . ( expression )
    (24) variable -> . ID
    (25) variable -> . matrix_access
    (21) constant -> . INTNUM
    (22) constant -> . FLOATNUM
    (23) constant -> . STRING
    (30) matrix -> . EYE ( int_sequence )
    (31) matrix -> . ZEROS ( int_sequence )
    (32) matrix -> . ONES ( int_sequence )
    (33) matrix -> . [ matrix_row ]
    (52) un_op -> . expression '
    (53) un_op -> . - expression
    (38) bin_op -> . expression + expression
    (39) bin_op -> . expression * expression
    (40) bin_op -> . expression - expression
    (41) bin_op -> . expression / expression
    (42) bin_op -> . expression DOTADD expression
    (43) bin_op -> . expression DOTSUB expression
    (44) bin_op -> . expression DOTMUL expression
    (45) bin_op -> . expression DOTDIV expression
    (46) logic_op -> . expression EQ expression
    (47) logic_op -> . expression NEQ expression
    (48) logic_op -> . expression > expression
    (49) logic_op -> . expression < expression
    (50) logic_op -> . expression LE expression
    (51) logic_op -> . expression GE expression
    (29) matrix_access -> . ID [ int_sequence ]

    (               shift and go to state 44
    ID              shift and go to state 15
    INTNUM          shift and go to state 45
    FLOATNUM        shift and go to state 46
    STRING          shift and go to state 47
    EYE             shift and go to state 48
    ZEROS           shift and go to state 49
    ONES            shift and go to state 50
    [               shift and go to state 51
    -               shift and go to state 52

    expression                     shift and go to state 37
    variable                       shift and go to state 38
    constant                       shift and go to state 39
    matrix                         shift and go to state 40
    un_op                          shift and go to state 41
    bin_op                         shift and go to state 42
    logic_op                       shift and go to state 43
    matrix_access                  shift and go to state 16

state 21

    (69) break_instr -> BREAK . ;

    ;               shift and go to state 53


state 22

    (68) continue_instr -> CONTINUE . ;

    ;               shift and go to state 54


state 23

    (70) print_instr -> PRINT . instructions_to_print ;
    (71) instructions_to_print -> . instructions_to_print , expression
    (72) instructions_to_print -> . expression
    (14) expression -> . variable
    (15) expression -> . constant
    (16) expression -> . matrix
    (17) expression -> . un_op
    (18) expression -> . bin_op
    (19) expression -> . logic_op
    (20) expression -> . ( expression )
    (24) variable -> . ID
    (25) variable -> . matrix_access
    (21) constant -> . INTNUM
    (22) constant -> . FLOATNUM
    (23) constant -> . STRING
    (30) matrix -> . EYE ( int_sequence )
    (31) matrix -> . ZEROS ( int_sequence )
    (32) matrix -> . ONES ( int_sequence )
    (33) matrix -> . [ matrix_row ]
    (52) un_op -> . expression '
    (53) un_op -> . - expression
    (38) bin_op -> . expression + expression
    (39) bin_op -> . expression * expression
    (40) bin_op -> . expression - expression
    (41) bin_op -> . expression / expression
    (42) bin_op -> . expression DOTADD expression
    (43) bin_op -> . expression DOTSUB expression
    (44) bin_op -> . expression DOTMUL expression
    (45) bin_op -> . expression DOTDIV expression
    (46) logic_op -> . expression EQ expression
    (47) logic_op -> . expression NEQ expression
    (48) logic_op -> . expression > expression
    (49) logic_op -> . expression < expression
    (50) logic_op -> . expression LE expression
    (51) logic_op -> . expression GE expression
    (29) matrix_access -> . ID [ int_sequence ]

    (               shift and go to state 44
    ID              shift and go to state 15
    INTNUM          shift and go to state 45
    FLOATNUM        shift and go to state 46
    STRING          shift and go to state 47
    EYE             shift and go to state 48
    ZEROS           shift and go to state 49
    ONES            shift and go to state 50
    [               shift and go to state 51
    -               shift and go to state 52

    instructions_to_print          shift and go to state 55
    expression                     shift and go to state 56
    variable                       shift and go to state 38
    constant                       shift and go to state 39
    matrix                         shift and go to state 40
    un_op                          shift and go to state 41
    bin_op                         shift and go to state 42
    logic_op                       shift and go to state 43
    matrix_access                  shift and go to state 16

state 24

    (3) statements -> statements statement .

    {               reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    WHILE           reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    RETURN          reduce using rule 3 (statements -> statements statement .)
    BREAK           reduce using rule 3 (statements -> statements statement .)
    CONTINUE        reduce using rule 3 (statements -> statements statement .)
    PRINT           reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    }               reduce using rule 3 (statements -> statements statement .)


state 25

    (5) statements -> statements { . statements }
    (2) statements -> . { statements }
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statements -> . statements { statements }
    (6) statement -> . assignment
    (7) statement -> . flow_control
    (8) assignment -> . variable assignment_op expression ;
    (54) flow_control -> . conditional_statement
    (55) flow_control -> . while_loop
    (56) flow_control -> . for_loop
    (57) flow_control -> . return_instr
    (58) flow_control -> . break_instr
    (59) flow_control -> . continue_instr
    (60) flow_control -> . print_instr
    (24) variable -> . ID
    (25) variable -> . matrix_access
    (61) conditional_statement -> . IF ( logic_op ) conditional_instructions
    (62) conditional_statement -> . IF ( logic_op ) conditional_instructions ELSE conditional_instructions
    (65) while_loop -> . WHILE ( logic_op ) conditional_instructions
    (66) for_loop -> . FOR ID = expression : expression conditional_instructions
    (67) return_instr -> . RETURN expression ;
    (69) break_instr -> . BREAK ;
    (68) continue_instr -> . CONTINUE ;
    (70) print_instr -> . PRINT instructions_to_print ;
    (29) matrix_access -> . ID [ int_sequence ]

    {               shift and go to state 3
    ID              shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    PRINT           shift and go to state 23

    statements                     shift and go to state 57
    statement                      shift and go to state 4
    assignment                     shift and go to state 5
    flow_control                   shift and go to state 6
    variable                       shift and go to state 7
    conditional_statement          shift and go to state 8
    while_loop                     shift and go to state 9
    for_loop                       shift and go to state 10
    return_instr                   shift and go to state 11
    break_instr                    shift and go to state 12
    continue_instr                 shift and go to state 13
    print_instr                    shift and go to state 14
    matrix_access                  shift and go to state 16

state 26

    (2) statements -> { statements . }
    (3) statements -> statements . statement
    (5) statements -> statements . { statements }
    (6) statement -> . assignment
    (7) statement -> . flow_control
    (8) assignment -> . variable assignment_op expression ;
    (54) flow_control -> . conditional_statement
    (55) flow_control -> . while_loop
    (56) flow_control -> . for_loop
    (57) flow_control -> . return_instr
    (58) flow_control -> . break_instr
    (59) flow_control -> . continue_instr
    (60) flow_control -> . print_instr
    (24) variable -> . ID
    (25) variable -> . matrix_access
    (61) conditional_statement -> . IF ( logic_op ) conditional_instructions
    (62) conditional_statement -> . IF ( logic_op ) conditional_instructions ELSE conditional_instructions
    (65) while_loop -> . WHILE ( logic_op ) conditional_instructions
    (66) for_loop -> . FOR ID = expression : expression conditional_instructions
    (67) return_instr -> . RETURN expression ;
    (69) break_instr -> . BREAK ;
    (68) continue_instr -> . CONTINUE ;
    (70) print_instr -> . PRINT instructions_to_print ;
    (29) matrix_access -> . ID [ int_sequence ]

    }               shift and go to state 58
    {               shift and go to state 25
    ID              shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    PRINT           shift and go to state 23

    statement                      shift and go to state 24
    assignment                     shift and go to state 5
    flow_control                   shift and go to state 6
    variable                       shift and go to state 7
    conditional_statement          shift and go to state 8
    while_loop                     shift and go to state 9
    for_loop                       shift and go to state 10
    return_instr                   shift and go to state 11
    break_instr                    shift and go to state 12
    continue_instr                 shift and go to state 13
    print_instr                    shift and go to state 14
    matrix_access                  shift and go to state 16

state 27
